--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # AssemblyAI API Key
 # Get your API key from: https://www.assemblyai.com/
 ASSEMBLYAI_API_KEY=your_api_key_here
+
+# Google Gemini API Key (for AI summarization)
+# Get your API key from: https://aistudio.google.com/apikey
+GOOGLE_GENERATIVE_AI_API_KEY=your_api_key_here
